Fix particles behind main content

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,3 +8,12 @@ nav a.active {
     font-weight: bold;
     text-decoration: underline;
 }
+
+ngx-particles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; // Ensure particles are behind other content
+}
